{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 87,
  "lineage": "fd7021e4-5bd0-3b36-3de1-48274a3c4df9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f35f8c2ccf17b7e7",
            "associate_with_private_ip": "10.0.1.159",
            "association_id": "eipassoc-0eb6945280ebef03d",
            "domain": "vpc",
            "id": "eipalloc-0f35f8c2ccf17b7e7",
            "instance": "i-0382b9514454b8b14",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0910bb6aa79976cff",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-52-204-109-61.compute-1.amazonaws.com",
            "public_ip": "52.204.109.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2_tic_tac_toe",
            "aws_internet_gateway.igw_tic_tac_toe",
            "aws_network_interface.ni_tic_tac_toe",
            "aws_security_group.sg_tic_tac_toe",
            "aws_subnet.subnet_tic_tac_toe",
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:829105229774:instance/i-0382b9514454b8b14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0382b9514454b8b14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0910bb6aa79976cff"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0910bb6aa79976cff",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-52-204-109-61.compute-1.amazonaws.com",
            "public_ip": "52.204.109.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095ad03323604b2d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043fbcafeab6fa944",
            "tags": {
              "Name": "ec2_ttt"
            },
            "tags_all": {
              "Name": "ec2_ttt"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fb1ee22cf2a88de"
            ]
          },
          "dependencies": [
            "aws_network_interface.ni_tic_tac_toe",
            "aws_security_group.sg_tic_tac_toe",
            "aws_subnet.subnet_tic_tac_toe",
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829105229774:internet-gateway/igw-06fb380b7babf0ecb",
            "id": "igw-06fb380b7babf0ecb",
            "owner_id": "829105229774",
            "tags": {
              "Name": "igw_ttt"
            },
            "tags_all": {
              "Name": "igw_ttt"
            },
            "vpc_id": "vpc-09e6c867f2596e6bf"
          },
          "dependencies": [
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ni_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829105229774:network-interface/eni-0910bb6aa79976cff",
            "attachment": [
              {
                "attachment_id": "eni-attach-096087a6d4120670f",
                "device_index": 0,
                "instance": "i-0382b9514454b8b14"
              }
            ],
            "id": "eni-0910bb6aa79976cff",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:9e:36:b5:31:39",
            "owner_id": "829105229774",
            "private_dns_name": "ip-10-0-1-159.ec2.internal",
            "private_ip": "10.0.1.159",
            "private_ip_list": [
              "10.0.1.159"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.159"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09fb1ee22cf2a88de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043fbcafeab6fa944"
          },
          "dependencies": [
            "aws_security_group.sg_tic_tac_toe",
            "aws_subnet.subnet_tic_tac_toe",
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tr_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06fb380b7babf0ecb",
            "id": "r-rtb-08425bfd3d96852eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08425bfd3d96852eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_tic_tac_toe",
            "aws_route_table.rt_tic_tac_toe",
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829105229774:route-table/rtb-08425bfd3d96852eb",
            "id": "rtb-08425bfd3d96852eb",
            "owner_id": "829105229774",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fb380b7babf0ecb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_ttt"
            },
            "tags_all": {
              "Name": "rt_ttt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e6c867f2596e6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a950fea7fbaf6d6a",
            "route_table_id": "rtb-08425bfd3d96852eb",
            "subnet_id": "subnet-043fbcafeab6fa944"
          },
          "dependencies": [
            "aws_route_table.rt_tic_tac_toe",
            "aws_subnet.subnet_tic_tac_toe",
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829105229774:security-group/sg-09fb1ee22cf2a88de",
            "description": "security group for the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fb1ee22cf2a88de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "Backend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "Frontend",
                "from_port": 5173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5173
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec_group",
            "name_prefix": "",
            "owner_id": "829105229774",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_web"
            },
            "tags_all": {
              "name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e6c867f2596e6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829105229774:subnet/subnet-043fbcafeab6fa944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043fbcafeab6fa944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "829105229774",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_ttt"
            },
            "tags_all": {
              "Name": "subnet_ttt"
            },
            "vpc_id": "vpc-09e6c867f2596e6bf"
          },
          "dependencies": [
            "aws_vpc.vpc_tic_tac_toe"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:829105229774:vpc/vpc-09e6c867f2596e6bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09919f29f4f5ae482",
            "default_route_table_id": "rtb-01dedc795912aaa7a",
            "default_security_group_id": "sg-060124615e9f172ed",
            "dhcp_options_id": "dopt-0d219aebc844a48e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e6c867f2596e6bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01dedc795912aaa7a",
            "owner_id": "829105229774",
            "tags": {
              "Name": "vpc_ttt"
            },
            "tags_all": {
              "Name": "vpc_ttt"
            }
          }
        }
      ]
    }
  ]
}